Grammar
// program      -> global_vars scope
// global_vars  -> ε
// global_vars  -> var_list SEMICOLON
// var_list     -> ID scope
// var_list     -> ID COMMA var_list
// scope        -> ID LBRACE public_vars private_vars stmt_list RBRACE
// public_vars  -> ε
// public_vars  -> PUBLIC COLON var_list SEMICOLON
// private_vars -> PRIVATE COLON var_list SEMICOLON
// stmt_list    -> stmt
// stmt_list    -> stmt stmt_list
// stmt         -> var_list SEMICOLON
// stmt         -> scope



/* Terminal :
 *
 *  ε, SEMICOLON, ID, LBRACE, RBRACE, PUBLIC, COLON, SEMICOLON,
 *
 * Non-Terminals :
 *
 * program, global_vars, var_list,scope,public_vars, stmt_list, stmt
 *

 Parser Tracker
 5/13
 Doing 6
